# monoids_mad

./: monoidsMad.cabal
src/: FrequentWords.hs  Identity.hs  MaybeMonoidalValidation.hs  MonoidHomomorphisms.hs  MonoidalChars.hs  MonoidalValidation.hs  MonoidsInPractice.hs  NonAssociativeOps.hs  Validation.hs
