name:                monoidsMad
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/monoidsMad#readme
license:             BSD3
license-file:        LICENSE
author:              Lorenzo Lopez Sancho
maintainer:          lorenzo.lopez@intec.es
copyright:           2016 Lorenzo Lopez Sancho
category:            Command line
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MonoidsInPractice
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mip
  hs-source-dirs:      src
  main-is:             MonoidsInPractice.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidsInPractice
  build-depends:       base
  default-language:    Haskell2010

executable mhs
  hs-source-dirs:      src
  main-is:             MonoidHomomorphisms.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidHomomorphisms
  build-depends:       base
                     , criterion
  default-language:    Haskell2010

executable fw
  hs-source-dirs:      src
  main-is:             FrequentWords.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is FrequentWords
  build-depends:       base
                     , criterion
                     , containers
  default-language:    Haskell2010

executable mc
  hs-source-dirs:      src
  main-is:             MonoidalChars.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidalChars
  build-depends:       base
  default-language:    Haskell2010

executable validation
  hs-source-dirs:      src
  main-is:             Validation.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Validation
  build-depends:       base
  default-language:    Haskell2010

executable mvalidation
  hs-source-dirs:      src
  main-is:             MonoidalValidation.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidalValidation
  build-depends:       base
  default-language:    Haskell2010

executable naops
  hs-source-dirs:      src
  main-is:             NonAssociativeOps.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is NonAssociativeOps
  build-depends:       base
  default-language:    Haskell2010

test-suite monoidsMad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monoidsMad
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/batou99/monoidsMad
